Remove in-line styles and format button

--- a/index.css
+++ b/index.css
@@ -47,11 +47,16 @@ h3 {
     font-size: 2em;
 }
 
-button {
+.action-button {
     background: #DAA89B;
-    border: #008868;
+    border: 2px #008868 outset;
+    font-family: Amarante, serif;
+    font-size: 18pt;
+    padding: 12pt;
+}
+
+.action-button:active {
     border-style: solid;
-    border-width: 2px;
 }
 
 body {
